--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 :root {
-  --section-padding: 50px;
+  --section-padding: 40px;
   --main-transition:0.5s;
   --main-color:#011627;
   --secondary-color:#0c4558;
@@ -40,6 +40,9 @@ a {
 body {
   background: linear-gradient(to bottom, #4CA1AF, #C4E0E5);
   font-family: 'Cairo', sans-serif;
+}
+.main{
+min-height: calc(100vh);
 }
 .container {
   padding-right: 15px;
@@ -106,7 +109,6 @@ body {
 }
 .control .bi-moon-fill:hover {
   color: #fff;
-  font-size: 28px;
 }
 .control .bi-brightness-high-fill {
   display: none;
@@ -117,13 +119,12 @@ body {
 }
 
 .control .bi-brightness-high-fill:hover {
-  font-size: 28px;
   color: #000;
 }
 /* end control */
 /* start heading */
 .heading {
-  margin: 100px 0 50px;
+  margin: 50px 0;
 }
 .heading h1 {
   text-align: center;
@@ -146,10 +147,10 @@ body {
   display: flex;
   cursor: pointer;
   font-size: 22px;
-  width: 70%;
+  width: 60%;
   text-align: center;
   margin: 0 auto 25px;
-  padding: 20px 15px;
+  padding: 17px 15px;
   background: linear-gradient(
     45deg,
     rgba(255, 255, 255, 0.486),
@@ -161,6 +162,12 @@ body {
   box-shadow: 0 0 10px gray;
   border-bottom: 5px solid rgba(65, 61, 61, 0.692);
   transition:var(--main-transition);
+}
+@media (max-width:992px) {
+  .tasks-section .task{
+    width: 80%;
+    
+  }
 }
 @media (max-width:767px) {
     .tasks-section .task{
@@ -208,7 +215,7 @@ body {
   transition: var(--main-transition);
 }
 .dis {
-    display: none;
+    opacity: 0;
   }
 .tasks-section .task .flex .bi-emoji-angry:hover {
   color: rgb(75, 209, 153);
@@ -235,12 +242,33 @@ body {
   opacity: 1;
   color: rgb(36, 199, 228);
 }
+.tasks-section .plus{
+  margin: 0 auto;
+  width: 70%;
+  text-align: center;
+  background: linear-gradient( 45deg, rgb(255 255 255 / 19%), rgb(255 255 255 / 37%) );
+  padding: 15px;
+  border-radius: 7px;
+  border: 2px dashed white;
+  cursor: pointer;
+}
+
+@media (max-width:767px) {
+  .tasks-section .plus{
+      width: 100%;
+    
+  }
+}
+.tasks-section .plus i{
+  font-size: 25px;
+  color: #3339;
+}
 /* start tasks section */
 /* start form */
 .form {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  margin-bottom: 100px;
+  margin-bottom: 22px;
 }
 .form h2 {
   text-align: center;
@@ -249,13 +277,12 @@ body {
 .form form {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  width: fit-content;
   margin: 0 auto;
 }
 @media (max-width:767px) {
     .form form{
-        flex-direction: column;
         justify-content: center;
         gap: 45px;
     }
@@ -264,7 +291,7 @@ body {
   all: unset;
   font-size: 17px;
   margin: 0 25px;
-  border-radius: 15px;
+  border-radius: 7px;
   border: none;
   background: linear-gradient(
     45deg,
@@ -272,8 +299,14 @@ body {
     rgba(255, 255, 255, 0.514)
   );
   box-shadow: 0 0 10px rgb(0 0 0 / 52%);
-  padding: 0.5rem 3rem;
   caret-color:var(--secondary-color) ;
+  width: 450px;
+    padding: 12px;
+}
+@media (max-width:767px) {
+  .form form input{
+      margin: 0;
+  }
 }
 .form form input::placeholder{
   text-align: center;
@@ -292,8 +325,7 @@ body {
       
 }
 .form form .bi-upload:hover {
-    font-size: 28px;
-    color: rgb(27, 177, 127);
+    color:var(--main-color);
   }
 /* end form */
 /* start footer */
@@ -302,11 +334,10 @@ footer{
   padding: 20px 30px;
   border-top: 1px solid var(--secondary-color);
   font-size: 17px;
-
 }
 footer a{
   display: inline-block;
-  color: #ad5173;
+  color: #275386;
   font-size: 20px;
   font-weight: bold;
   margin-left: 10px;
@@ -318,7 +349,7 @@ footer a{
 /* start Dark mode */
 @media (prefers-color-scheme: dark) {
   .dark {
-    background: linear-gradient(to bottom, #2c3e50, #4ca1af);
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
   }
   .dark .bi-moon-fill {
     color: #fff;
@@ -343,6 +374,9 @@ footer a{
     background: linear-gradient(45deg, #ccdbfd, #d7e3fc);
     box-shadow: 0 0 10px rgba(184, 180, 180, 0.747);
   }
+  .dark .tasks-section .plus i{
+    color: #333;
+  }
   .dark .bi-upload:hover {
     color: #00d4c9;
   }
@@ -352,12 +386,21 @@ footer a{
   }
   .dark #eng:hover {
     background-color: turquoise;
+    border-color: turquoise;
   }
   .dark #arb:hover {
     background-color: rgb(199, 106, 118);
+
   }
-   .dark footer a{
+  .dark footer{
     color: #fff;
+  }
+  .dark footer a{
+    color: #fff;
+    transition: .4s;
+  }
+  .dark footer a:hover{
+    color: #81d1ff;
   }
 }
 /* end dark mode */
